# glone

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
game/camera/: camera.cpp  camera.h
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
input/: input.cpp  input.h
rendering/sprite/: sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h
rendering/texture/: texture.cpp  texture.h
shader_compiler/: shader_compiler.cpp  shader_compiler.h  shader_program.cpp  shader_program.h
shaders/: testfs.fs
